# dillhaven-assistant

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/actions/setup-build-environment/: action.yaml
.github/workflows/: ci.yaml
crates/dillhaven-assistant/: Cargo.toml
crates/dillhaven-assistant-audio/: Cargo.toml
crates/dillhaven-assistant-audio/src/: audio_capture.rs  audio_playback.rs  lib.rs  resample.rs
crates/dillhaven-assistant-client/: Cargo.toml
crates/dillhaven-assistant-llm/: Cargo.toml
crates/dillhaven-assistant-llm/src/: manager.rs  model.rs  prompt.rs  token_stream.rs
crates/dillhaven-assistant-observe/: Cargo.toml
crates/dillhaven-assistant-server/: Cargo.toml
crates/dillhaven-assistant-server/src/: lib.rs
crates/dillhaven-assistant-speech-to-text/: Cargo.toml
crates/dillhaven-assistant-speech-to-text/src/: lib.rs  manager.rs  model.rs  output_stream.rs
crates/dillhaven-assistant-sync/: Cargo.toml
crates/dillhaven-assistant-sync/src/: lib.rs  lifespan.rs  stream.rs
crates/dillhaven-assistant-sync/src/stream/: broadcast.rs  mod.rs  mspc.rs  transmit.rs
crates/dillhaven-assistant-text-processing/: Cargo.toml
crates/dillhaven-assistant-text-processing/src/: sentence_chunker.rs
crates/dillhaven-assistant-text-to-speech/: Cargo.toml
crates/dillhaven-assistant-text-to-speech/src/: lib.rs  manager.rs  piper.rs
crates/dillhaven-assistant-types/: Cargo.toml
crates/dillhaven-assistant-types/src/: dialogue.rs
crates/dillhaven-assistant-util/: Cargo.toml
crates/dillhaven-assistant-util/src/: candle.rs  huggingface.rs  lib.rs  timer.rs
crates/dillhaven-assistant/src/: cli.rs  main.rs
src/: main.rs
src/app/: candle.rs  dialogue.rs  huggingface.rs  mod.rs
src/audio/: audio_capture.rs  audio_playback.rs  mod.rs
src/llm/: manager.rs  mod.rs  model.rs  token_stream.rs
src/observe/: mod.rs
src/speech_to_text/: config.rs  manager.rs  model.rs  output_stream.rs
src/sync/: stream.rs
src/text/: mod.rs  sentence_chunker.rs
src/text_to_speech/: manager.rs  mod.rs  piper.rs
