[package]
name = "dillhaven-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
candle-core = { version = "0.9.1", features = ["cuda"] }
candle-nn = "0.9.1"
candle-transformers = { version = "0.9.1" }
cpal = "0.16.0"
moshi = { version = "0.6.3", features = ["cuda"] }
serde = "1.0.223"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
sentencepiece = "0.12.0"
sentencepiece-sys = { version = "0.12.0", features = ["static"] }
hf-hub = "0.4.3"
kaudio = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
adaptive-barrier = "1.0.0"
once_cell = "1.21.3"
log = "0.4.28"
tokenizers = "0.22.1"
rand = "0.9.2"
piper-rs = { version = "0.1.9" }
ort-sys = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
async-trait = "0.1.89"

[patch.crates-io]
audiopus_sys = { git = 'https://github.com/sevenc-nanashi/audiopus_sys', rev = '00e9d16' }

[features]
flash = ["candle-transformers/flash-attn"]

[profile.dev]
rpath = true

[profile.release]
rpath = true
