[workspace]
members = [
    "crates/dillhaven-assistant",
    "crates/dillhaven-assistant-audio",
    "crates/dillhaven-assistant-observe",
    "crates/dillhaven-assistant-llm",
    "crates/dillhaven-assistant-speech-to-text",
    "crates/dillhaven-assistant-sync",
    "crates/dillhaven-assistant-text-to-speech",
    "crates/dillhaven-assistant-text-processing",
    "crates/dillhaven-assistant-server",
    "crates/dillhaven-assistant-client",
    "crates/dillhaven-assistant-util"
    , "crates/dillhaven-assistant-types"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "In-Home assistant"
repository = "https://github.com/pdylanross/dillhaven-assistant"
keywords = ["machine-learning"]
categories = ["home automation"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
dillhaven-assistant-observe = { path = "crates/dillhaven-assistant-observe" }
dillhaven-assistant-audio = { path = "crates/dillhaven-assistant-audio" }
dillhaven-assistant-llm = { path = "crates/dillhaven-assistant-llm" }
dillhaven-assistant-speech-to-text = { path = "crates/dillhaven-assistant-speech-to-text" }
dillhaven-assistant-sync = { path = "crates/dillhaven-assistant-sync" }
dillhaven-assistant-text-to-speech = { path = "crates/dillhaven-assistant-text-to-speech" }
dillhaven-assistant-text-processing = { path = "crates/dillhaven-assistant-text-processing" }
dillhaven-assistant-server = { path = "crates/dillhaven-assistant-server" }
dillhaven-assistant-client = { path = "crates/dillhaven-assistant-client" }
dillhaven-assistant-util = { path = "crates/dillhaven-assistant-util" }
dillhaven-assistant-types = { path = "crates/dillhaven-assistant-types" }

anyhow = "1.0.99"
candle-core = { version = "0.9.1" }
candle-nn = "0.9.1"
candle-transformers = { version = "0.9.1" }
clap = { version = "4.5.48", features = ["derive"] }
cpal = "0.16.0"
moshi = { version = "0.6.3" }
serde = "1.0.223"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
sentencepiece = "0.12.0"
sentencepiece-sys = { version = "0.12.0", features = ["static"] }
hf-hub = "0.4.3"
kaudio = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
adaptive-barrier = "1.0.0"
once_cell = "1.21.3"
tokenizers = "0.22.1"
rand = "0.9.2"
piper-rs = { version = "0.1.9" }
ort-sys = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
async-trait = "0.1.89"

[patch.crates-io]
audiopus_sys = { git = 'https://github.com/sevenc-nanashi/audiopus_sys', rev = '00e9d16' }

[profile.dev]
rpath = true

[profile.release]
rpath = true
