[package]
name = "dillhaven-assistant-llm"
edition = "2021"
version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
dillhaven-assistant-sync = { workspace = true }
dillhaven-assistant-observe = { workspace = true }
dillhaven-assistant-text-processing = { workspace = true }
dillhaven-assistant-util = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }

[features]
cuda = ["candle-core/cuda"]
flash = ["candle-transformers/flash-attn"]