[package]
name = "dillhaven-assistant-server"
edition = "2021"
version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
dillhaven-assistant-observe = { workspace = true }
dillhaven-assistant-llm = { workspace = true }
dillhaven-assistant-speech-to-text = { workspace = true }
dillhaven-assistant-sync = { workspace = true }
dillhaven-assistant-text-to-speech = { workspace = true }
dillhaven-assistant-util = { workspace = true }
dillhaven-assistant-types = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
gpu = ["dillhaven-assistant-llm/cuda", "dillhaven-assistant-llm/flash", "dillhaven-assistant-speech-to-text/cuda", "dillhaven-assistant-speech-to-text/flash"]