[package]
name = "dillhaven-assistant"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true


[dependencies]
dillhaven-assistant-observe = { workspace = true }
dillhaven-assistant-server = { workspace = true }
dillhaven-assistant-client = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }

[features]
gpu = ["dillhaven-assistant-server/gpu"]



